--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="x-mask"></div>
             <div class="x-score">1</div>
         </div>
-        <img src="./Assets/x-icon.png" class="x-img image hidden">
-        <img src="./Assets/o-icon.png" class="o-img image hidden">
+        <img src="./assets/x-icon.png" class="x-img image hidden">
+        <img src="./assets/o-icon.png" class="o-img image hidden">
         <div class="sec-2">
             <div class="square-1 square hov-r hov-b" id="1"></div>
             <div class="square-2 square hov-r hov-b" id="2"></div>
@@ -66,8 +66,8 @@
             <div class="x-mask"></div>
             <div class="x-score">1</div>
         </div>
-        <img src="./Assets/x-icon.png" class="x-img image hidden">
-        <img src="./Assets/o-icon.png" class="o-img image hidden">
+        <img src="./assets/x-icon.png" class="x-img image hidden">
+        <img src="./assets/o-icon.png" class="o-img image hidden">
         <div class="sec-2">
             <div class="square-1 square hov-r hov-b" id="1"></div>
             <div class="square-2 square hov-r hov-b" id="2"></div>
